--- a/docker-compse.yml
+++ b/docker-compse.yml
@@ -7,11 +7,18 @@ services:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
+      - "--entrypoints.websecure.address=:443"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
+      - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.myresolver.acme.email=your-email@example.com"
+      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
     ports:
       - "80:80"
+      - "443:443"
       - "8080:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./letsencrypt:/letsencrypt
     networks:
       - web
 
@@ -20,6 +27,8 @@ services:
     labels:
       - "traefik.http.routers.frontend.rule=PathPrefix(`/`)"
       - "traefik.http.services.frontend.loadbalancer.server.port=3000"
+      - "traefik.http.routers.frontend.entrypoints=web"
+      - "traefik.http.routers.frontend.tls.certresolver=myresolver"
     networks:
       - web
 
@@ -28,6 +37,8 @@ services:
     labels:
       - "traefik.http.routers.backend.rule=PathPrefix(`/api`, `/docs`)"
       - "traefik.http.services.backend.loadbalancer.server.port=8000"
+      - "traefik.http.routers.backend.entrypoints=web"
+      - "traefik.http.routers.backend.tls.certresolver=myresolver"
     networks:
       - web
 
@@ -45,24 +56,26 @@ services:
   adminer:
     image: adminer
     ports:
-      - 8080:8080
+      - "8080:8080"
     networks:
       - web
-
-volumes:
-  pgdata:
-
-networks:
-  web:
-
 
   proxy:
     image: 'jc21/nginx-proxy-manager:latest'
     ports:
-      - '8090:80'
+      - '80:80'
       - '81:81'
+      - '443:443'
     volumes:
       - data:/data
       - letsencrypt:/etc/letsencrypt
     networks:
       - web
+
+volumes:
+  pgdata:
+  data:
+  letsencrypt:
+
+networks:
+  web:
