--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,17 +5,17 @@ FROM node:14-alpine
 WORKDIR /app
 
 # Install dependencies
-COPY package.json yarn.lock ./
-RUN yarn install
+COPY package.json .
+RUN npm install
 
 # Copy the rest of the app
 COPY . .
 
 # Build the app
-RUN yarn build
+RUN npm install
 
 # Expose the port the app runs on
 EXPOSE 3000
 
 # Start the app
-CMD ["yarn", "start"]
+CMD ["npm", "start"]
