--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.8-slim
 WORKDIR /app
 
 
-RUN pip install --no-cache-dir uvicorn==0.15.0 fastapi==0.68.2
+RUN pip install uvicorn
 
 
 COPY . .
